# birthday-bot

./: .dockerignore  .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  buttons.py  callbacks.py  config.py  config.py.example  docker-compose.debug.yml  docker-compose.yml  main.py  messages.py  middlewares.py  pyproject.toml  qodana.yaml  requirements.txt  states.py
.circleci/: config.yml
.github/actions/install/: action.yml
.github/workflows/: build.yml  code_check.yml  deployment.yml  qodana_code_quality.yml
bot/: __main__.py  buttons.py  callbacks.py  commands.py  config.py  main.py  settings.py
bot/enums/: __init__.py  confirm_types.py  group_actions.py  language.py
bot/filters/: chat_admin.py
bot/handlers/exceptions/: __init__.py
bot/handlers/group/: collect.py  commands.py  invite_bot.py  kick_bot.py  kick_member.py  start.py
bot/handlers/inGroup/: __init__.py
bot/handlers/inPrivate/: __init__.py  calendar.py  form.py  help.py  remove.py  reset.py
bot/handlers/private/: __init__.py  calendar.py  form.py  removeme.py  reset.py
bot/keyboards/: calendar_widget.py  confirm.py  custom_calendar.py  donate.py  gender.py  groups.py  register.py  reset.py
bot/messages/: inGroup.py  inPrivate.py  sheduler.py
bot/middlewares/: database.py  globalVariables.py  i18n.py
bot/models/: __init__.py  base.py  congratulation.py  enums.py  group.py  user.py  usergrouplink.py
bot/repositories/: base.py  congratulation.py  group.py  uow.py  user.py
bot/routers/: __init__.py
bot/routers/admin/: __init__.py  add_congratulation.py
bot/routers/general/: __init__.py  donate.py
bot/routers/group/: __init__.py  collect.py  commands.py  invite_bot.py  invite_users.py  kick_bot.py  kick_member.py  rename_group.py  start.py
bot/routers/private/: __init__.py  bot_was_kicked.py  calendar.py  form.py  removeme.py  reset.py  start.py
bot/scheduler/: __init__.py
bot/services/: geo_service.py  google_maps.py  scheduler.py
bot/states/: add_congratulation.py  form.py
bot/translator/: hub.py
bot/types/: __init__.py  language.py
bot/utils/: commands.py  i18n_format.py  links.py  logger.py  logs.py  redis_manager.py
handlers/: exceptions.py  inGroup.py  inPrivate.py
locales/: ua.ftl
locales/en/LC_MESSAGES/: en.ftl
locales/uk_UA/LC_MESSAGES/: ua.ftl
messages/: inGroup.py  inPrivate.py  sheduler.py
migrations/: env.py
migrations/versions/: 280206bf1561_initial.py  6597c31fa2f1_init.py  8cffab87acb2_.py  9c1c66c0a6a8_initial.py  d93529c7daa1_initial.py  da415202154f_added_congratulation_language.py
scheduler/: __init__.py
utils/: logs.py
