[tool.poetry]
name = "birthday-bot"
version = "0.1.0"
description = ""
authors = ["Kulunchick <nikolikrasovski@gmail.com>"]
readme = "README.md"
packages = [{include = "birthday_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {version = "^3.0.0b8", allow-prereleases = true}
uvloop = {version = "^0.17.0", platform = "linux"}
structlog = "^23.1.0"
fluentogram = "^1.1.6"
apscheduler = "^3.10.1"
geopy = "^2.3.0"
redis = "^4.6.0"
pydantic-settings = "^2.0.2"
cachetools = "^5.3.1"
alembic = "^1.11.3"
pre-commit = "^3.3.3"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"
mypy = "^1.5.1"
types-redis = "^4.6.0.5"
types-cachetools = "^5.3.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
