[tool.poetry]
name = "birthday-bot"
version = "0.1.0"
description = ""
authors = ["Kulunchick <nikolikrasovski@gmail.com>"]
readme = "README.md"
packages = [{include = "birthday_bot"}]

[tool.poetry.dependencies]
python = ">=3.11"
uvloop = {version = "^0.19.0", platform = "linux"}
structlog = "^24.1.0"
apscheduler = "^3.10.4"
geopy = "^2.4.1"
redis = "^5.0.1"
pydantic-settings = "^2.2.1"
cachetools = "^5.3.3"
alembic = "^1.13.1"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
fluent-compiler = "^1.0"
aiogram-i18n = "^1.3.4"
tzfpy = "^0.15.3"
aiogram-dialog = "^2.1.0"
aiogram = "^3.4.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"


[tool.poetry.group.types.dependencies]
mypy = "^1.5.1"
types-redis = "^4.6.0.5"
types-cachetools = "^5.3.0.6"
types-pytz = "^2023.3.0.1"
jinja2 = "^3.1.2"


[tool.poetry.group.lint.dependencies]
ruff = "^0.0.286"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]


[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
