[project]
name = "birthday-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kulunchick", email = "nikolikrasovski@gmail.com" }
]
dependencies = [
    "aiogram>=3.8.0",
    "structlog>=24.2.0",
    "apscheduler>=3.10.4",
    "geopy>=2.4.1",
    "redis>=5.0.7",
    "alembic>=1.13.2",
    "sqlalchemy>=2.0.31",
    "pydantic-settings>=2.3.4",
    "cachetools>=5.3.3",
    "asyncpg>=0.29.0",
    "fluent-compiler>=1.1",
    "aiogram-i18n>=1.4",
    "tzfpy>=0.15.5",
    "aiogram-dialog>=2.1.0",
    "alembic-postgresql-enum>=1.2.0",
    "uvloop>=0.19.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "mypy>=1.10.1",
    "ruff>=0.5.0",
    "jinja2>=3.1.4",
    "types-redis>=4.6.0.20240425",
    "types-cachetools>=5.3.0.7",
    "types-pytz>=2024.1.0.20240417",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/birthday_bot"]

[tool.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]


[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true